--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,3 +21,37 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
 
 @import "bootstrap";
+
+/*-----------------Fonts-----------------*/
+$darkBlue : #232741;
+$green : #5DC976;
+$gray : #EFEFEF;
+$twitterBlue :  #1DA1F2;
+
+/*-----------------color-----------------*/
+
+$darkBlue : #232741;
+$green : #5DC976;
+$gray : #EFEFEF;
+$twitterBlue :  #1DA1F2;
+
+/*-----------------CSS-----------------*/
+
+.site-branding
+{
+    img {
+        width: 320px;
+        margin : 16px;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        margin-left: auto;
+        margin-right:auto;
+    }
+    
+}
+
+#site-navigation{
+    display: flex;
+    justify-content: center;
+  }
