--- a/assets/css/_particle.scss
+++ b/assets/css/_particle.scss
@@ -33,7 +33,7 @@
     }
 }
 
-@media screen and (max-width: $maxWidthMobile) {
+@media screen and (max-width: $maxTablet) {
     #particles-js div
     {
         margin-left:10vw;
