padding and font size

--- a/assets/css/_archive-team.scss
+++ b/assets/css/_archive-team.scss
@@ -11,8 +11,8 @@
         display: flex;
         justify-content: space-between;
         width: 90vw;
-        margin:40px auto;
         max-width: $maxTablet;
+        margin: auto;
     }
 }
 @media screen and (max-width: $maxPhone) {
