--- a/assets/css/_particle.scss
+++ b/assets/css/_particle.scss
@@ -4,13 +4,13 @@
     height: 60vh;
     width: 100vw;
     color: $myGray;
-    div
+    .headerContent
     {
         position: absolute;
         display: block;
         top : 25%;
         max-width: 60vw;
-        margin-left: 15vw;
+        left: 15%;
         z-index: 100;
         h1
         {
@@ -39,22 +39,39 @@
 
 @media screen and (max-width: $maxTablet) 
 {
-    #particles-js div
+    #particles-js .headerContent
     {
-        margin-left:10vw;
-        margin-right: 10vw;
-        max-width: 80vw;
+        top:auto;
+        left:auto;
+        min-width: 100%;
+        min-height: 60vh;
+        display: grid;
+        grid-template-columns: 10% 80% 10%;
+        grid-template-rows:  10% 40% 40% 10%;;
+        justify-content: center;
+        align-content: center;
         h1
         {
+            grid-column: 2/3;
+            grid-row: 2/3;
+            align-self: center;
+            justify-self: center;
+            max-width: 90vw;
             font-size: 40px;
             margin-left: auto;
             margin-right: auto;
             text-align: center !important;
         }
         
-        a 
+        .grBttn
         {
+            grid-area: 2/3/3/2;
+            align-self: center;
+            justify-self: center;
             font-size: 20px;
+            margin-top: 0!important;
+            margin-left: auto!important;
+            margin-right: auto!important;;
         }
     }
 }
