add post and category

--- a/assets/css/_archives.scss
+++ b/assets/css/_archives.scss
@@ -9,6 +9,13 @@
     {
         text-align: center;
     }
+    p
+    {
+        width: 90vw;
+        max-width: $maxTablet;
+        margin: auto;
+        text-align: justify;
+    }
     #texte
     {
         width: $maxTablet;
