--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -367,3 +367,12 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
     }
 
 }
+
+#main404
+{
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+}
