--- a/assets/css/_archive-team.scss
+++ b/assets/css/_archive-team.scss
@@ -28,7 +28,7 @@
         {
             margin: auto;
             width: 90vw;
-            max-width: 1000px;
+            max-width: $maxTablet;
             display: flex;
             justify-content: space-around;
             align-items: center;
