--- a/assets/css/_archives.scss
+++ b/assets/css/_archives.scss
@@ -11,8 +11,8 @@
     }
     p
     {
-        width: 90vw;
-        max-width: $maxTablet;
+        width: $maxTablet;
+        max-width: 90vw;
         margin: auto;
         text-align: justify;
     }
