--- a/assets/css/_parameters.scss
+++ b/assets/css/_parameters.scss
@@ -84,8 +84,8 @@ i
 
 /*-----------------largeur max menu mobile-----------------*/
 
-$maxTablet : 80em;
-$maxPhone : 44em;
+$maxTablet : 1000px;
+$maxPhone : 720px;
 
 html {
     scroll-behavior: smooth;
