--- a/assets/css/_archive-job.scss
+++ b/assets/css/_archive-job.scss
@@ -11,11 +11,11 @@
         width: 90vw;
         margin: auto;
         display: grid;
-        grid-template-columns: 10% 80% 10%;
+        grid-template-columns: 5% 85% 10%;
         grid-template-rows: 30% 70%;
         h2
         {
-            padding: 10px;
+            padding: 20px;
             grid-column: 1/3;
             grid-row: 1/2;
             text-align: left;
@@ -73,6 +73,7 @@
             grid-column: 1/2;
             grid-row: 2/3;
             width: 90%;
+            margin: auto;
         }
         a
         {
