--- a/assets/css/_single-job.scss
+++ b/assets/css/_single-job.scss
@@ -1,8 +1,13 @@
-#job
+#singleJobContent
 {
     margin : auto;
     width: 90vw;
     max-width: $maxTablet;
+    h2
+   {
+       text-align: left;
+       margin: 2rem 0 1rem;
+   } 
     #contactBttn
     {
         display: flex;
