fix elementor icon

--- a/assets/css/_parameters.scss
+++ b/assets/css/_parameters.scss
@@ -73,7 +73,7 @@ body {
   small, .text_small {font-size: 0.8em!important;}
 
   /*----------------FontAwesome-----------------*/
-i
+.FontAwesome
 {
     font-family: FontAwesome !important;
     color : $myGray;
