--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,14 +38,20 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
         display: flex;
         justify-content: center;
         align-items: center;
-
+        max-width: 80vw;
+        margin: auto;
         iframe,p 
         {
             width: 560px!important;
         }
+        p
+        {
+            font-size: 1.25rem;
+            
+        }
         *
         {
-            margin: 10px;
+            margin: 0 20px;
         }
     }
 }
@@ -58,7 +64,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
         ul
         {
             width: $maxTablet;
-            max-width: 90vw;
+            max-width: $maxWidthContent;
             margin: auto;
             display: flex;
             flex-direction: row;
@@ -77,6 +83,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
                 p
                 {
                     text-align: center;
+                    text-transform: uppercase;
                     font-weight: 800;
                 }
             }
@@ -91,7 +98,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
     {
         margin: auto;
         width: $maxTablet;
-        max-width: 90vw;
+        max-width: $maxWidthContent;
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -102,6 +109,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
         }
         p{
             text-align: center;
+            font-size: 1.25rem;
         }
     }
 
@@ -117,7 +125,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
             justify-content: center;
             vertical-align: center;
             text-align: center;
-            
         }
     }
 }
@@ -295,14 +302,10 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
             padding: 0 !important;
             display: flex;
             flex-direction:column-reverse;
-            p
-            {
-                text-align: justify;
-            }
             *
             {
                 margin: 20px;
-                max-width: 95vw;
+                max-width: $maxWidthContent;
             }
 
         }
