fix margin for profil in team

--- a/assets/css/_archive-team.scss
+++ b/assets/css/_archive-team.scss
@@ -29,11 +29,11 @@
                 display: flex;
                 flex-direction: column;
                 width: 200px;
-                margin: 10px;
+                margin:0 10px 20px 10px;
                 img
                 {
                     width: 150px;
-                    margin: 20px auto;
+                    margin: 0 auto 20px  auto;
                     display: block;
                 }
                 .first_name
