--- a/assets/css/_archives.scss
+++ b/assets/css/_archives.scss
@@ -12,7 +12,7 @@
     p
     {
         width: $maxTablet;
-        max-width: 90vw;
+        max-width: $maxWidthContent;
         margin: auto;
         text-align: justify;
     }
