--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -182,7 +182,7 @@ display: none;
     #primary-menu
     {
         width:$maxTablet;
-        max-width: 90vw;
+        max-width: $maxWidthContent;
         display: inline-flex;
         justify-content: center;
         margin: 0 !important;
