--- a/assets/css/_particle.scss
+++ b/assets/css/_particle.scss
@@ -56,7 +56,7 @@
             grid-row: 2/3;
             align-self: center;
             justify-self: center;
-            max-width: 90vw;
+            max-width: $maxWidthContent;
             font-size: 40px;
             margin-left: auto;
             margin-right: auto;
