--- a/assets/css/_archive-post.scss
+++ b/assets/css/_archive-post.scss
@@ -24,7 +24,10 @@
         }
         .excerpt
         {
-            padding: 0 0 20px 0;
+            p
+            {
+                padding: 0 15px;
+            }
         }
         .postBttn
         {
