--- a/assets/css/_archive-post.scss
+++ b/assets/css/_archive-post.scss
@@ -27,7 +27,7 @@
             padding: 0 0 20px 0;
             p
             {
-                padding: 0 15px;
+                padding: 15px 0;
             }
         }
         .postBttn
