--- a/assets/css/_archive-post.scss
+++ b/assets/css/_archive-post.scss
@@ -68,13 +68,13 @@
     }
 }
 
-@media screen and (max-width: calc($maxTablet+80px)) 
-{
-    #arhiveContent
-    { 
-        ul
-        {
-        justify-content: center;
-        }
-    }
-}
+// @media screen and (max-width: calc($maxTablet+80px)) 
+// {
+//     #arhiveContent
+//     { 
+//         ul
+//         {
+//         justify-content: center;
+//         }
+//     }
+// }
