--- a/assets/css/_parameters.scss
+++ b/assets/css/_parameters.scss
@@ -150,8 +150,16 @@ section:not(.noPadding)
     padding-bottom: 40px !important;
 }
 
-/*-----------------fix elementor-----------------*/
+/*-----------------fix css elementor and wpform-----------------*/
 strong
 {
     font-weight: 800;
+}
+
+@media only screen and (max-width: 600px)
+{
+.wpforms-container-full .wpforms-form .wpforms-field 
+    {
+    overflow-x: hidden !important;
+    }
 }
