--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,6 +27,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import "footer";
 @import "archives";
 @import "header";
+@import "fix";
 
 
 /*-----------------home Page-----------------*/
