--- a/assets/css/_fix.scss
+++ b/assets/css/_fix.scss
@@ -1,7 +1,7 @@
 /*-----------------fix css elementor and wpform-----------------*/
 strong, b
 {
-    font-weight: 800 !important;
+    font-weight: bold!important;
 }
 
 @media only screen and (max-width: 600px)
