delete Lora font

--- a/assets/css/_archive-post.scss
+++ b/assets/css/_archive-post.scss
@@ -20,7 +20,7 @@
         h3
         {
             margin-bottom: 5px;
-            font-family: $muli;
+            font-family: $fontOne;
         }
         .excerpt
         {
@@ -39,7 +39,7 @@
                 border-radius: 0 0 $borderRadius $borderRadius;
                 width: 310px;
                 background-color: $darkBlue;
-                font-family: $muli;
+                font-family: $fontOne;
                 padding: 10px;
                 text-decoration: none;
                 color: $myGray;
