--- a/assets/css/_particle.scss
+++ b/assets/css/_particle.scss
@@ -21,7 +21,7 @@
             font-size: 4vw;
             text-shadow: $shadow;
             text-align: left;
-            font-family: $muli;
+            font-family: $fontOne;
             color: $myGray;
         }
         a 
