--- a/assets/css/_archive-job.scss
+++ b/assets/css/_archive-job.scss
@@ -19,7 +19,7 @@
             grid-column: 1/3;
             grid-row: 1/2;
             text-align: left;
-            font-family: $muli;
+            font-family: $fontOne;
             font-size: 35px;
         }
         p
@@ -68,7 +68,7 @@
             grid-column: 1/2;
             grid-row: 1/2;
             text-align: left;
-            font-family: $muli;
+            font-family: $fontOne;
             font-size: 35px;
         }
         p
