--- a/assets/css/_parameters.scss
+++ b/assets/css/_parameters.scss
@@ -32,9 +32,9 @@ $borderRadius : 3px;
 
 
 /*-----------------Fonts-----------------*/
-$muli :'muli', sans-serif;
-$lora :'muli', sans-serif;
-// $lora :'Lora', serif;
+$fontOne :'muli', sans-serif;
+$fontTwo :'muli', sans-serif;
+// $fontTwo :'Lora', serif;
 
 a,p
 {
@@ -43,7 +43,7 @@ a,p
 
 h2,h1
 {
-   font-family: $lora;
+   font-family: $fontTwo;
    color: $TomcoGray;
    text-align: center;
 }
@@ -120,7 +120,7 @@ h2
     border-color: $green!important;
     box-shadow: $shadow!important;
     font-size: 1.25rem !important;
-    font-family: $muli ;
+    font-family: $fontOne ;
     margin:30px auto 0 auto !important;
 }
 .blBttn
