fixe ul elementor

--- a/assets/css/_fix.scss
+++ b/assets/css/_fix.scss
@@ -12,7 +12,7 @@ strong, b
     }
 }
 
-.layoutArea .column ul
+.elementor-widget-text-editor .elementor-text-editor ul
 {
     list-style: inside !important;
 }
