fixe ul elementor

--- a/assets/css/_fix.scss
+++ b/assets/css/_fix.scss
@@ -14,5 +14,5 @@ strong, b
 
 .elementor-widget-text-editor .elementor-text-editor ul
 {
-    list-style: inside !important;
+    list-style: circle inside !important;
 }
