fixe ul elementor

--- a/assets/css/_fix.scss
+++ b/assets/css/_fix.scss
@@ -15,5 +15,5 @@ strong, b
 .elementor-widget-text-editor .elementor-text-editor ul
 {
     list-style: circle inside !important;
-    display: list-item !important;
+    //display: list-item !important;
 }
