--- a/assets/css/_fix.scss
+++ b/assets/css/_fix.scss
@@ -14,6 +14,11 @@ strong, b
 
 .elementor-widget-text-editor .elementor-text-editor ul
 {
-    list-style: circle inside !important;
-    //display: list-item !important;
+    display: block !important;
+    list-style-type: disc !important;
+    margin-top: 1em !important;
+    margin-bottom: 1em!important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    padding-left: 40px !important;
 }
