fixe ul elementor

--- a/assets/css/_fix.scss
+++ b/assets/css/_fix.scss
@@ -12,7 +12,7 @@ strong, b
     }
 }
 
-.elementor-widget-text-editor .elementor-text-editor ul
+.elementor-widget-text-editor .elementor-text-editor ul, .wp-editor-area ul
 {
     display: block !important;
     list-style-type: disc !important;
